Add Mongodb CRUD boilerplate
